added templating fragments

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-      background-image: url(./img/arena.jpg);
+      background-image: url(/img/arena.jpg);
       background-position: center;
       background-attachment: fixed;
       background-size: cover;
