--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,38 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Heroes</title>
-    <link rel="stylesheet" href="/css/reset-css.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/fragments :: head"></head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a href="/home" class="navbar-brand text-white h4">Heroes</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-            <ul class="navbar-nav row w-25">
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/home">Home</a>
-                </li>
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-white  active h5" href="/heroes/create">Create Hero</a>
-                </li>
-                <li class="nav-item col-md-4">
-                    <form>
-                        <a class="nav-link text-white active h5" href="/logout">Logout</a>
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <nav th:replace="fragments/fragments :: nav"></nav>
 </header>
 <main>
     <div class="text-center mb-3">
@@ -71,12 +42,6 @@
     </div>
 </main>
 <span style="visibility: hidden">...</span>
-<footer class="footer bg-dark  py-2">
-    <div class="container-fluid text-center">
-        <div class="footer-background h5 text-white">
-            &#169; CopyRight Victorious Arena. All rights reserved.
-        </div>
-    </div>
-</footer>
+<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
