--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,36 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Heroes</title>
-    <link rel="stylesheet" href="../resources/css/reset-css.css">
-    <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../resources/css/style.css">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/fragments :: head"></head>
 <body>
 <header>
-    <nav class="navbar bg-dark navbar-expand-lg navbar-background bg-dark ">
-        <a class="navbar-brand text-white h4" href="/">Heroes</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-            <ul class="navbar-nav row">
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Home</a>
-                </li>
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/users/login">Login</a>
-                </li>
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/users/register">Register</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <nav th:replace="fragments/fragments :: nav"></nav>
 </header>
 <main>
     <h1 class="text-center">Register</h1>
@@ -71,12 +44,6 @@
         </div>
     </form>
 </main>
-<footer class="footer bg-dark  py-2">
-    <div class="container-fluid text-center">
-        <div class="footer-background h5 text-white">
-            &#169; CopyRight Victorious Arena. All rights reserved.
-        </div>
-    </div>
-</footer>
+<footer th:replace="fragments/fragments :: footer"></footer>
 </body>
 </html>
