--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,36 +8,42 @@
 <main>
     <h1 class="text-center">Register</h1>
     <hr class="hr-3"/>
-    <form class="mx-auto w-15">
+    <form class="mx-auto w-15" th:object="${userRegisterBindingModel}"
+          th:method="POST" action="/users/register" >
         <div class="form-group">
+            <h5 th:if="${exists}" class="bg-danger rounded">User already exists</h5>
             <div class="label-holder textCol d-flex justify-content-center">
                 <label for="username" class="h4 mb-2 text-white">Username</label>
             </div>
-            <input type="text" class="form-control" id="username" name="username"/>
+            <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username" name="username"/>
+            <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger">Username error message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="email" class="h4 mb-2">Email</label>
             </div>
-            <input type="email" class="form-control" id="email" name="email"/>
+            <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email" name="email"/>
+            <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Email error message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="password" class="h4 mb-2">Password</label>
             </div>
-            <input type="password" class="form-control" id="password" name="password"/>
+            <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password" name="password"/>
+            <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Password error message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
             </div>
-            <input class="form-control" type="password" id="confirmPassword" name="confirmPassword"/>
+            <input th:field="*{confirmPassword}" th:errorclass="bg-danger" class="form-control" type="password" id="confirmPassword" name="confirmPassword"/>
         </div>
 		<div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                  <label for="country" class="h4 mb-2">Country</label>
 			</div>
-            <input type="text" class="form-control" id="country" name="country"/>
+            <input th:field="*{country}" th:errorclass="bg-danger" type="text" class="form-control" id="country" name="country"/>
+            <small th:if="${#fields.hasErrors('country')}" th:errors="*{country}" class="text-danger">Password error message</small>
         </div>
         <div class="button-holder d-flex justify-content-center">
             <button class="btn btn-info text-white mb-3" type="submit">Register</button>
