--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
         <p class="h4">The most furious arena on the web</p>
         <p class="h4">You will find many strong enemies but only the best will survive</p>
         <hr class="my-3"/>
-        <h3><a href="/login"> if you have an account or</a>
-            <a href="/register"> now and meet the greatest heroes of all time.</a>
+        <h3><a href="/users/login"> if you have an account or</a>
+            <a href="/users/register"> now and meet the greatest heroes of all time.</a>
         </h3>
     </div>
 </main>
