--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,18 +8,24 @@
 <main>
     <h1 class="text-center">Login</h1>
     <hr class="hr-3"/>
-    <form class="mx-auto w-15">
+    <form class="mx-auto w-15" th:object="${userLoginBindingModel}"
+          action="/users/login" method="POST">
+        <th:block th:each="e : ${#fields.errors()}" th:object="${e}">
+            <small th:text="${e}" class="text-danger new-line">Error message</small>
+            <br/>
+        </th:block>
+        <small th:if="${notFound}" class="text-danger new-line">Incorrect email or password!</small>
         <div class="form-group">
             <div class="label-holder text-white d-flex justify-content-center">
                 <label for="username" class="h3 mb-2">Username</label>
             </div>
-            <input type="text" class="form-control" id="username" name="username"/>
+            <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username" name="username"/>
         </div>
         <div class="form-group">
             <div class="label-holder text-white d-flex justify-content-center">
                 <label for="password" class="h3 mb-2">Password</label>
             </div>
-            <input type="password" class="form-control" id="password" name="password"/>
+            <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password" name="password"/>
         </div>
         <div class="button-holder d-flex justify-content-center">
             <button class="btn btn-info text-white mb-3" type="submit">Login</button>
