--- a/src/main/resources/templates/create-hero.html
+++ b/src/main/resources/templates/create-hero.html
@@ -15,6 +15,13 @@
             </div>
             <input type="text" class="form-control" id="heroName" name="heroName"/>
         </div>
+
+        <div class="form-group">
+            <div class="text-white label-holder d-flex justify-content-center">
+                <label for="imageUrl" class="h4 mb-2">Hero Name</label>
+            </div>
+            <input type="text" class="form-control" id="imageUrl" name="imageUrl"/>
+        </div>
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="heroClass" class="h4 mb-2">Hero Class</label>
