--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,36 +7,18 @@
 </header>
 <main>
     <div class="text-center mb-3">
-        <h4 class="text-white mt-2">Welcome to the arena, #{username}}</h4>
+        <h4 class="text-white mt-2" th:text="|Welcome to the arena, ${username}|">
+            Welcome to the arena, #{username}}</h4>
     </div>
     <hr class="my-3"/>
     <div class="container">
         <div class="row mb-4 d-flex justify-content-around">
-            <div class="col-md-3 d-flex flex-column text-center mb-3">
-                <img name="hreoImage.jpg" class="img-thumb" width="300" height="300"/>
-                <h5 class="text-white text-center">Warrior</h5>
-                <a class="btn btn-info mb-2">Details</a>
-                <a class="btn btn-danger">Delete</a>
-            </div>
-            <div class="col-md-3 d-flex flex-column text-center mb-3">
-                <img name="hreoImage.jpg" class="img-thumb" width="300" height="300"/>
-                <h5 class="text-white text-center">Rogue</h5>
-                <a class="btn btn-info mb-2">Details</a>
-                <a class="btn btn-danger">Delete</a>
-            </div>
-            <div class="col-md-3 d-flex flex-column text-center mb-3">
-                <img name="hreoImage.jpg" class="img-thumb" width="300" height="300"/>
-                <h5 class="text-white text-center">Mage</h5>
-                <a class="btn btn-info mb-2">Details</a>
-                <a class="btn btn-danger">Delete</a>
-            </div>
-        </div>
-        <div class="row mb-4 d-flex justify-content-around">
-            <div class="col-md-3 d-flex flex-column text-center mb-3">
-                <img name="hreoImage.jpg" class="img-thumb" width="300" height="300"/>
-                <h5 class="text-white text-center">Warrior</h5>
-                <a class="btn btn-info mb-2">Details</a>
-                <a class="btn btn-danger">Delete</a>
+            <div th:each="h : ${heroes}" th:object="${h}"
+                    class="col-md-3 d-flex flex-column text-center mb-3">
+                <img th:src="*{imageUrl}" class="img-thumb" width="300" height="300"/>
+                <h5 th:text="*{name}" class="text-white text-center">Warrior</h5>
+                <a class="btn btn-info mb-2" href="/heroes/details">Details</a>
+                <a class="btn btn-danger" href="/heroes/delete">Delete</a>
             </div>
         </div>
     </div>
