--- a/src/main/resources/templates/create-hero.html
+++ b/src/main/resources/templates/create-hero.html
@@ -8,35 +8,42 @@
 <main>
     <h1 class="text-center mt-2">Create Hero</h1>
     <hr class="hr-3"/>
-    <form class="mx-auto w-15">
+    <form class="mx-auto w-15" th:object="${heroCreateBindingModel}"
+          method="POST" action="/heroes/create">
+
         <div class="form-group">
+            <h5 th:if="${exists}" class="bg-danger rounded">Hero already exists</h5>
             <div class="text-white label-holder d-flex justify-content-center">
-                <label for="heroName" class="h4 mb-2">Hero Name</label>
+                <label for="name" class="h4 mb-2">Hero Name</label>
             </div>
-            <input type="text" class="form-control" id="heroName" name="heroName"/>
+            <input th:field="*{name}" th:errorclass="bg-danger"  type="text" class="form-control" id="name" name="name"/>
+            <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger">Name error message</small>
         </div>
 
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
-                <label for="imageUrl" class="h4 mb-2">Hero Name</label>
+                <label for="imageUrl" class="h4 mb-2">Image URL</label>
             </div>
-            <input type="text" class="form-control" id="imageUrl" name="imageUrl"/>
+            <input th:field="*{imageUrl}" th:errorclass="bg-danger" type="text" class="form-control" id="imageUrl" name="imageUrl    "/>
+            <small th:if="${#fields.hasErrors('imageUrl')}" th:errors="*{imageUrl}" class="text-danger">Image error message</small>
         </div>
+
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="heroClass" class="h4 mb-2">Hero Class</label>
             </div>
-            <select style="margin-left: 30%; width: 100px;" id="heroClass">
-                <option value="warrior" itemLabel="Warrior"></option>
-                <option value="archer" itemLabel="Archer"></option>
-                <option value="mage" itemLabel="Mage"></option>
+            <select th:field="*{heroClass}" th:errorclass="bg-danger" style="margin-left: 30%; width: 100px;" id="heroClass">
+                <option value="">Select Class</option>
+                <option th:each="c : ${T(com.exam.heroes.model.entity.ClassName).values()}"
+                        th:text="${c}" th:value="${c}">Class Name</option>
             </select>
         </div>
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="level" class="h4 mb-2">Level</label>
             </div>
-           <input type="number" class="form-control" id="level" name="level"/>
+           <input th:field="*{level}" th:errorclass="bg-danger" type="number" class="form-control" id="level" name="level"/>
+            <small th:if="${#fields.hasErrors('level')}" th:errors="*{level}" class="text-danger">Level error message</small>
         </div>
         <div class="button-holder d-flex justify-content-center">
             <button class="btn btn-info text-white mb-3" type="submit">
