implemented details and delete hero

--- a/src/main/resources/templates/delete-hero.html
+++ b/src/main/resources/templates/delete-hero.html
@@ -8,24 +8,27 @@
 <main>
     <h1 class="text-center mt-2">Delete Hero</h1>
     <hr class="hr-3"/>
-    <form class="mx-auto w-15">
+    <form class="mx-auto w-15" th:object="${hero}" method="POST" th:action="@{/heroes/delete/{id}(id = *{id})}">
         <div class="form-group">
             <div class="label-holder d-flex justify-content-center text-white">
                 <label for="name" class="h3 mb-2">Name</label>
             </div>
-            <input type="text" class="form-control" id="name" name="name" value="SoulTaker" disabled="true">
+            <input type="text" class="form-control" id="name" name="name"
+                   th:value="*{name}" disabled="true">
         </div>
         <div class="form-group">
             <div class="label-holder d-flex justify-content-center text-white">
                 <label for="heroClass" class="h3 mb-2">Hero class</label>
             </div>
-            <input type="text" class="form-control" id="heroClass" name="heroClass" value="Warrior" disabled="true"/>
+            <input type="text" class="form-control" id="heroClass" name="heroClass"
+                   th:value="*{heroClass}" disabled="true"/>
         </div>
         <div class="form-group">
             <div class="label-holder d-flex justify-content-center text-white">
                 <label for="level" class="h3 mb-2">Level</label>
             </div>
-            <input type="number" class="form-control" id="level" name="level" value="75" disabled="true"/>
+            <input type="number" class="form-control" id="level" name="level"
+                   th:value="*{level}" disabled="true"/>
         </div>
         <div class="button-holder d-flex justify-content-center">
             <button class="btn btn-danger text-white mb-3" type="submit" value="Delete Hero">Delete Hero</button>
