--- a/src/main/resources/templates/details-hero.html
+++ b/src/main/resources/templates/details-hero.html
@@ -12,18 +12,18 @@
     <hr class="my-3"/>
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-6" th:object="${hero}">
                 <div class="label mt-2">
                     <h2 class="text-white text-center">Name</h2>
-                    <h4 class="text-white text-center">SoulTaker</h4>
+                    <h4 class="text-white text-center" th:text="*{name}">SoulTaker</h4>
                 </div>
                 <div class="label mt-4">
                     <h2 class="text-white text-center">Class</h2>
-                    <h4 class="text-white text-center">Warrior</h4>
+                    <h4 class="text-white text-center" th:text="*{heroClass}">Warrior</h4>
                 </div>
                 <div class="label mt-4">
                     <h2 class="text-white text-center">Level</h2>
-                    <h4 class="text-white text-center mb-3">75</h4>
+                    <h4 class="text-white text-center mb-3" th:text="*{level}">75</h4>
                 </div>
             </div>
         </div>
